--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 400;
+  src: url('./assets/fonts/OpenSans-Regular.ttf')
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-weight: 700;
+  src: url('./assets/fonts/OpenSans-Bold.ttf')
+}
 * {
   margin: 0px;
   padding: 0px;
