--- a/src/pages/containers/BurgerController.module.css
+++ b/src/pages/containers/BurgerController.module.css
@@ -1,7 +1,8 @@
 .container {
   width: 100%;
-  height: 480px;
+  height: 240px;
+  padding: 20px 0px;
   display: grid;
   justify-content: center;
-  overflow-y: scroll;
+  background-color: #cf8f2e;
 }
