--- a/src/pages/containers/BurgerController.module.css
+++ b/src/pages/containers/BurgerController.module.css
@@ -1,8 +1,9 @@
 .container {
-  width: 100%;
-  height: 240px;
-  padding: 20px 0px;
+  width: 100vw;
+  height: 25vh;
   display: grid;
-  justify-content: center;
-  background-color: #cf8f2e;
+  align-content: center;
+  grid-template-columns: repeat(2, 2fr);
+  grid-gap: 25px;
+  background-color: #dc4d41;
 }
