--- a/src/pages/containers/components/IngredientController.module.css
+++ b/src/pages/containers/components/IngredientController.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 25vw;
+  width: 250px;
   height: 50px;
   padding: 20px;
   justify-self: center;
@@ -41,5 +41,5 @@
   cursor: pointer;
 }
 .counter button:disabled {
-  background-color: #ff7f6c;
+  background-color: #df5d52;
 }
