Blackdrop do modal

--- a/src/pages/containers/OrderModal.module.css
+++ b/src/pages/containers/OrderModal.module.css
@@ -1,9 +1,18 @@
+.blackdrop {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  background-color: #0000007f;
+}
 .container {
   width: 400px;
   height: 480px;
-  position: fixed;
-  top: calc(50vh - 240px);
-  left: calc(50vw - 200px);
+  position: relative;
   display: grid;
   justify-content: center;
   align-content: center;
