--- a/src/pages/containers/BurgerDisplay.module.css
+++ b/src/pages/containers/BurgerDisplay.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 100vw;
-  height: 75vh;
+  height: calc(100vh - 240px);
   display: grid;
   justify-content: center;
   overflow-y: scroll;
