Envio do pedido ao banco de dados

--- a/src/pages/containers/components/NavItem.module.css
+++ b/src/pages/containers/components/NavItem.module.css
@@ -2,7 +2,7 @@
   width: auto;
   height: 80px;
   display: grid;
-  justify-content: center;
+  justify-content: end;
   align-content: center;
   grid-auto-flow: column;
   grid-gap: 10px;
