--- a/src/pages/containers/BurgerDisplay.module.css
+++ b/src/pages/containers/BurgerDisplay.module.css
@@ -1,6 +1,9 @@
 .container {
-  width: 100vw;
-  height: calc(100vh - 240px);
+  width: calc(100vw - 300px);
+  height: calc(100vh - 80px);
+  position: fixed;
+  top: 80px;
+  left: 300px;
   display: grid;
   justify-content: center;
   overflow-y: scroll;
