--- a/src/pages/containers/BurgerController.module.css
+++ b/src/pages/containers/BurgerController.module.css
@@ -1,21 +1,26 @@
 .container {
-  width: 100vw;
-  height: 160px;
+  width: 300px;
+  height: calc(100vh - 80px);
+  position: fixed;
+  top: 80px;
+  left: 0px;
   display: grid;
-  grid-template-rows: repeat(2, 1fr);
+  grid-auto-flow: row;
+  grid-gap: 20px;
   background-color: #dc4d41;
+  overflow-y: scroll;
 }
 .priceDisplay {
   display: grid;
   justify-content: center;
   align-content: center;
-  grid-template-columns: repeat(2, 1fr);
+  grid-auto-flow: row;
   grid-gap: 20px;
 }
 .controlPanel {
   display: grid;
   justify-content: center;
   align-content: center;
-  grid-template-columns: repeat(4, 1fr);
+  grid-auto-flow: row;
   grid-gap: 20px;
 }
