--- a/src/pages/containers/Header.module.css
+++ b/src/pages/containers/Header.module.css
@@ -3,6 +3,6 @@
   height: 80px;
   padding: 0px 60px;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  background-color: #dc4d41;
+  grid-template-columns: repeat(2, auto);
+  background-color: #fbb540;
 }
