--- a/src/pages/containers/components/NavItem.module.css
+++ b/src/pages/containers/components/NavItem.module.css
@@ -1,17 +1,15 @@
 .navItem {
-  width: auto;
+  width: 200px;
   height: 80px;
-  display: grid;
-  justify-content: end;
-  align-content: center;
-  grid-auto-flow: column;
-  grid-gap: 10px;
-  text-decoration: none;
 }
-.navItem div {
+.navItem a {
+  width: 200px;
+  height: 80px;
   display: grid;
   justify-content: center;
   align-content: center;
+  grid-auto-flow: column;
+  grid-gap: 10px;
 }
 .navItem svg {
   width: 32px;
@@ -25,4 +23,7 @@
   font-weight: 400;
   font-size: 20px;
   color: #dc4d41;
+}
+.active {
+  background-color: #fbc262;
 }
